# asyncffmpeg

./: .bumpversion.cfg  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  compose.yml  docker-compose.yml  hotfix_test_keyboard_interrupt.md  hotfix_test_keyboard_interrupt_for_coverage.md  hotfix_test_terminate.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json  docker-compose.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: analyze.yml  codeql.yml  deploy.yml  qlty.yml  test.yml
asyncffmpeg/: __init__.py  exceptions.py  ffmpeg_coroutine.py  ffmpeg_coroutine_factory.py  type_alias.py
asyncffmpeg/ffmpegprocess/: __init__.py  interface.py  posix.py  windows.py  windows_wrapper.py
asyncffmpeg/pipe/: __init__.py  pipe_manager.py  realtime_pipe_reader.py
docs/: CONTRIBUTING.md
tests/: __init__.py  conftest.py  test_asyncffmpeg.py  test_ffmpeg_coroutine.py
tests/pipe/: __init__.py  test_pipe_manager.py  test_realtime_pipe_reader.py
tests/testlibraries/: __init__.py  create_stream_spec_croutine.py  example_use_case.py  instance_resource.py  print_forever.py  process_pool_executor_simulator.py  subprocess_wrapper_windows.py  types.py
tests/testlibraries/keyboardinterrupter/: __init__.py  keyboard_interrupter.py  local_socket.py
tests/testresources/: example_readme.py
