[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  # For testing
  "asynccpu",
  "bump-my-version",
  "invokelint[basic]>=0.19.0",
  # For testing
  "psutil",
  "pytest-resource-path",
  "pyvelocity",
  # To use ParamSpec
  "typing-extensions; python_version <= '3.9'",
  "types-psutil",
]

[project]
name = "asyncffmpeg"
version = "1.4.0"
description = "Supports async / await pattern for FFmpeg operations."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["asyncffmpeg", "ffmpeg", "ffmpeg-python", "asyncio", "asynchronous", "video", "audio", "image", "capture", "conversion", "streaming", "processing"]
authors = [
  {name = "Yukihiko Shinoda", email = "yuk.hik.future@gmail.com"},
]
maintainers = [
  {name = "Yukihiko Shinoda", email = "yuk.hik.future@gmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Capture",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Capture",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: System :: Archiving :: Packaging",
  "Typing :: Typed",
]
dependencies = [
  # To control ffmpeg by Python
  "ffmpeg-python",
  # To display progress of FFmpeg operations
  "livesubprocess",
  # To handle Ctrl + C event in Windows for graceful shutdown FFmpeg
  "pywin32; sys_platform == 'win32'",
]

[project.urls]
homepage = "https://github.com/yukihiko-shinoda/asyncffmpeg"
# documentation = "https://readthedocs.org"
repository = "https://github.com/yukihiko-shinoda/asyncffmpeg"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.bandit.assert_used]
skips = ["tests/*"]

[tool.bumpversion]
current_version = "1.4.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "asyncffmpeg/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.coverage.report]
exclude_also = [
  # Assume `if TYPE_CHECKING: ... else: ...` block is covered · Issue #831 · nedbat/coveragepy
  #   https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
  "if TYPE_CHECKING:",
  # Pylint will detect instead:
  # - abstract-method / W0223 - Pylint 2.17.0-dev0 documentation
  #   https://pylint.readthedocs.io/en/latest/user_guide/messages/warning/abstract-method.html
  "raise NotImplementedError",
]

[tool.coverage.run]
# Some test requires following settings to correct coverage since they are using subprocess
concurrency = ["multiprocessing", "thread"]
# To attempts to save coverage data even when a process is terminated by a SIGTERM signal
sigterm = true
# To remap paths when coverage combines data files:
# - Combining data files: coverage combine — Coverage.py documentation
#   https://coverage.readthedocs.io/en/latest/commands/cmd_combine.html#re-mapping-paths
source = ["asyncffmpeg"]
relative_files = true
debug = ["pathmap"]
omit = [
  "asyncffmpeg/ffmpegprocess/windows.py",
  "asyncffmpeg/ffmpegprocess/windows_wrapper.py",
]

[tool.docformatter]
recursive = true
# For compatibility with Black
# - How to Configure docformatter — docformatter 1.7.5 documentation
#   https://docformatter.readthedocs.io/en/stable/configuration.html#a-note-on-options-to-control-styles
pre_summary_space = true
wrap-descriptions = 119
wrap-summaries = 119

[tool.flake8]
# Since B950 in flake8-bugbear detects lines that exceed max_line_length by more than 10%:
# - PyCQA/flake8-bugbear: A plugin for Flake8 finding likely bugs and design problems in your program. Contains warnings that don't belong in pyflakes and pycodestyle.
#   https://github.com/PyCQA/flake8-bugbear?tab=readme-ov-file#opinionated-warnings
# This setting follows the Black documentation in case when we use flake8-bugbear:
# - Using Black with other tools - Black 25.1.0 documentation
#   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
# Set max_line_length to account for B950's 10% allowance to maintain consistency with pyvelocity
max_line_length = 108
extend_ignore = [
  # For compatibility with Black:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "E203",
  "E501",
  "E701",
  # 2025-05-24 Now openstack/hacking wasn't introduced into Ruff and sorting imports is mainly considered with isort.
  "H306",
  # Cohesion may be in experimental.
  "H601",
]
statistics = true
show_source = true
exclude = [
  ".venv",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "ffmpeg",
  "win32api",
  "win32con"
]
ignore_missing_imports = true

[tool.pylint.master]
extension-pkg-whitelist = [
  "win32api"
]

[tool.pylint]
disable = [
  # We check line length by flake8-bugbear B950.
  "line-too-long",
]

[tool.pylint.basic]
docstring-min-length = "7"

[tool.pylint.format]
max-line-length = 119

[tool.pylint.options]
# Since this rule against single responsibility principle.
# - python - Why does Pylint want two public methods per class? - Stack Overflow
#   https://stackoverflow.com/a/40258006/12721873
min-public-methods = "1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s %(process)d %(levelname)s %(name)s:%(filename)s:%(lineno)d %(message)s"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
external = [
  "DUO",  # dlint
  "H",    # Openstack/hacking
]
select = [
  "ALL",
  # Since compatible with PEP257, we can check docstring style by Ruff and don't need to consider about docstring style separately:
  # - Should the first line of a Python function docstring be in imperative mood? (ruff / pydocstyle D401)
  #   https://zenn.dev/y_shinoda/articles/pydocstyle-d401
  "D401",    # First line should be in imperative mood
]
ignore = [
  # lint.pydocstyle
  # Reason: Docstring may be missed since docstring-min-length is set.
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D105",    # Missing docstring in magic method
  "D106",    # Missing docstring in public nested class
  "D107",    # Missing docstring in __init__
  # Reason: First line may ends with function signature for expression.
  "D402",    # First line should not be the function’s “signature”
  # Reason: First line may ends with ":" for expression.
  "D415",    # First line should end with a period, question mark, or exclamation point
  # Reason: `Line too long` is checked by flake8-bugbear.
  "E501",    # Line too long ({width} > {limit})
  "T201",  # `print` found: Temporary
]
unfixable = [
  # When fix `return a and b != ""` as `return a and b`, mypy will report warning:
  #   error: Incompatible return value type (got "Union[Literal[False], str]", expected "bool")  [return-value]
  "PLC1901",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
# The default value: 10 is too loose,
# 5 is as same as the default value of Radon for A rank that we use without any problems for a decade.
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]
